--- a/main.ui
+++ b/main.ui
@@ -55,7 +55,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="load_data_api_btn">
+          <widget class="QPushButton" name="make_ana_data_btn">
            <property name="minimumSize">
             <size>
              <width>200</width>
@@ -69,7 +69,7 @@
             </size>
            </property>
            <property name="text">
-            <string>Load Data (api)</string>
+            <string>Make analysis Data</string>
            </property>
           </widget>
          </item>
