--- a/main.ui
+++ b/main.ui
@@ -22,13 +22,13 @@
         <property name="minimumSize">
          <size>
           <width>0</width>
-          <height>250</height>
+          <height>450</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
           <width>16777215</width>
-          <height>250</height>
+          <height>450</height>
          </size>
         </property>
         <property name="title">
@@ -69,7 +69,7 @@
             </size>
            </property>
            <property name="text">
-            <string>Make analysis Data</string>
+            <string>증권데이터 DB 정리</string>
            </property>
           </widget>
          </item>
@@ -131,6 +131,63 @@
           </widget>
          </item>
          <item>
+          <widget class="QPushButton" name="add_column_btn">
+           <property name="minimumSize">
+            <size>
+             <width>200</width>
+             <height>40</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>200</width>
+             <height>40</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>DB column 추가</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="add_row_btn">
+           <property name="minimumSize">
+            <size>
+             <width>200</width>
+             <height>40</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>200</width>
+             <height>40</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>DB row 추가</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="del_row_btn">
+           <property name="minimumSize">
+            <size>
+             <width>200</width>
+             <height>40</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>200</width>
+             <height>40</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>DB row 제거</string>
+           </property>
+          </widget>
+         </item>
+         <item>
           <spacer name="spacer">
            <property name="orientation">
             <enum>Qt::Vertical</enum>
@@ -151,13 +208,13 @@
         <property name="minimumSize">
          <size>
           <width>0</width>
-          <height>250</height>
+          <height>450</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
           <width>16777215</width>
-          <height>250</height>
+          <height>450</height>
          </size>
         </property>
         <property name="title">
